--- a/config/locales/devise.ja.yml
+++ b/config/locales/devise.ja.yml
@@ -33,6 +33,15 @@ ja:
         kana_first_name: みょうじ
         kana_last_name: なまえ
         birthday: 生年月日
+      destination:
+        first_name: 苗字
+        last_name: 名前
+        kana_first_name: みょうじ
+        kana_last_name: なまえ
+        postal_code: 郵便番号
+        prefecture_id: 都道府県
+        city: 市区町村
+        address: 番地
     models:
       user: ユーザ
   devise:
